# TermSheet

./: .gitignore  CLAUDE.md  PRD.md
.claude/: launch.json
app/: package-lock.json  package.json  tailwind.config.ts  vercel.json
app/.claude/: launch.json
app/src/agent/: graph.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/accelerators/: page.tsx
app/src/app/arena/: page.tsx
app/src/app/connect/: page.tsx
app/src/components/: AuthGuard.tsx  BootScreen.tsx  LiveFeed.tsx  Navbar.tsx  Providers.tsx  SharkCard.tsx  Win95Window.tsx
app/src/context/: AuthContext.tsx
app/src/lib/: accelerator-data.ts  arena-sessions.ts  auth-fetch.ts  mock-data.ts  paid-sessions.ts  pitch-credits.ts  supabase.ts  thirdweb.ts
server/: .dockerignore  .env.example  main.py  pyproject.toml  requirements.txt  termsheet.db
server/alembic/: env.py
server/alembic/versions/: 0778e2b875e3_replace_with_sessions_messages_invest_.py  426d6a62c006_initial_tables.py  549049d0c11d_add_approval_workflow_to_invest_records.py  a3c1f7e89d01_add_unique_active_session_constraint.py
server/app/agent/: graph.py  pdf_tools.py  web_tools.py
server/app/api/: routes.py
server/app/core/: auth.py  config.py  database.py
server/app/models/: __init__.py  base.py  enums.py  schemas.py  tables.py
server/app/services/: extract.py  transcribe.py
server/prompt/chamath/: system.py
server/prompt/garry/: system.py
server/prompt/marc/: system.py
specs/: todo.md
specs/backend/: charge.md  db.md  evomap.md  rate-limit-analysis.md
specs/frontend/: dev.md
(+17 files in other folders)
